# kuka-bartender

./: README.md
kuka-bartender/bartender_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
kuka-bartender/bartender_control/cfg/: controller.cfg
kuka-bartender/bartender_control/include/bartender_control/: one_task_inverse_kinematics.h
kuka-bartender/bartender_control/include/bartender_control/utils/: quaternion.h  skew_symmetric.h
kuka-bartender/bartender_control/msg/: bartender_msg.msg  cfg_msg.msg
kuka-bartender/bartender_control/src/: one_task_inverse_kinematics.cpp
kuka-bartender/bartender_control/srv/: bartender_srv.srv
kuka-bartender/bartender_description/: package.xml
kuka-bartender/bartender_description/config/: bartender_controllers.yaml  bottles.yaml  bottles.yaml~  hardware_interfaces.yaml  left_arm_names.yaml  right_arm_names.yaml
kuka-bartender/bartender_description/launch/: bartender_description.launch  bartender_description_old.launch  bartender_description_old_1.launch  bartender_description_old_2.launch  rviz_config.rviz
kuka-bartender/bartender_description/model/: bottle.urdf.xacro  calibrator.urdf.xacro  glass.urdf.xacro
kuka-bartender/bartender_description/robot/: bartender.urdf.xacro
kuka-bartender/bartender_manager/: CMakeLists.txt  package.xml
kuka-bartender/bartender_manager/cfg/: bartender.cfg  bartender.cfg~
kuka-bartender/bartender_manager/include/: BartenderManager.h
kuka-bartender/bartender_manager/launch/: bartender_manager.launch
kuka-bartender/bartender_manager/src/: bartender_manager.cpp  main.cpp
kuka-bartender/bartender_manager/srv/: bartender_srv.srv
